tests/ui/coroutine/type-mismatch-error.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/type-mismatch-error.rs:17:17
   |
LL | /             if false {
LL | |                 yield ();
   | |                 --------- expected because of this
LL | |             } else {
LL | |                 a
   | |                 ^ expected `()`, found `u8`
LL | |
LL | |             }
   | |_____________- `if` and `else` have incompatible types
   |
help: consider removing this semicolon
   |
LL -                 yield ();
LL +                 yield ()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
